# PiloteMyBoxServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: message.hpp  messageprocessor.hpp  udp_server.hpp
src/: main.cpp
